--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_home_page.xml
@@ -6,20 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".Fragments.FragmentHomePage">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFragmentHomePagePopular"
-        android:layout_width="0dp"
-        android:layout_height="160dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/tvFragmentHomePageHelloName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -27,195 +16,283 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="107dp"
         android:text="Zdravo, Mia"
-        app:layout_constraintEnd_toStartOf="@+id/cardView"
+        app:layout_constraintEnd_toStartOf="@+id/cvFragmentHomePageProfile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="85dp"
-        android:layout_height="85dp"
+        android:id="@+id/cvFragmentHomePageProfile"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
         app:cardCornerRadius="250dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
+        app:layout_constraintStart_toEndOf="@+id/tvFragmentHomePageHelloName"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/fup_profile_picture_id"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:id="@+id/ivFragmentHomePageProfile"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_baseline_person_24"
             tools:ignore="ContentDescription" />
     </androidx.cardview.widget.CardView>
 
+
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/tvFragmentHomePageSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="Pretraži lokacije"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cvFragmentHomePageProfile" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/editTextTextPersonName3"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvFragmentHomePageSearch"
         android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/rounded_white_button_login"
-        android:ems="10"
-        android:hint="  Pretraga"
-        android:inputType="textPersonName"
+        android:elevation="0dp"
+        app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/tvFragmentHomePageSearch">
 
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="200dp"
-        android:text="Popularno"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/textView11"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
 
-    <TextView
-        android:id="@+id/textView11"
-        android:layout_width="64dp"
-        android:layout_height="19dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        android:minHeight="48dp"
-        android:text="Prikaži sve"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
-        tools:ignore="TouchTargetSizeCheck" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etFragmentHomePageSearch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_white_button_login"
+            android:hint="  Pretraga"
+            android:inputType="textPersonName" />
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="49dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="#00FFFFFF"
+            app:backgroundTint="#00FFFFFF"
+            app:cornerRadius="16dp"
+            app:icon="@drawable/ic_baseline_search_24"
+            app:iconTint="#333D70" />
+
+    </androidx.cardview.widget.CardView>
+    <!--***************************SCROLL****************************************-->
 
     <ScrollView
-        android:id="@+id/scrollview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/svFragmentHomePageMainScroll"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvFragmentHomePagePopular">
+        app:layout_constraintTop_toBottomOf="@+id/cvFragmentHomePageSearch"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
-            android:id="@+id/linearLayout2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.0">
 
-            <ImageButton
-                android:id="@+id/imageButton4"
-                android:layout_width="wrap_content"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvFragmentHomePageText1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background='@color/white'
-                android:src="@drawable/location_beach"
-                tools:ignore="SpeakableTextPresentCheck" />
+                >
 
-            <ImageButton
-                android:id="@+id/imageButton6"
+                <TextView
+                    android:id="@+id/tvFragmentHomePagePopular"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="left"
+                    android:text="Popularno"
+                    android:textStyle="bold" />
 
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tvFragmentHomePagePopularShowAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:clickable="true"
+                    android:text="Prikaži sve"
+
+                    tools:ignore="TouchTargetSizeCheck" />
+
+            </androidx.cardview.widget.CardView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvFragmentHomePagePopular"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background='@color/white'
-                android:src="@drawable/location_mountain"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-            <ImageButton
-                android:id="@+id/imageButton5"
-                android:layout_width="wrap_content"
+                android:layout_marginBottom="16dp"
+            />
+            <HorizontalScrollView
+                android:id="@+id/hsvFragmentHomePageLocationButtonScroll"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:background='@color/white'
-                android:src="@drawable/location_city"
-                tools:ignore="SpeakableTextPresentCheck" />
 
-            <ImageButton
-                android:id="@+id/imageView8"
-                android:layout_width="wrap_content"
+                >
+
+                <LinearLayout
+                    android:id="@+id/llFragmentHomePageLocationButtonLayout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <ImageButton
+                        android:id="@+id/imageButton4"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_city"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton6"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_beach"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton5"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_mountain"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageView8"
+                        android:layout_width="60dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_lake"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton16"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_spa"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton7"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_waterfall"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton11"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_amusement_park"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton10"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_attraction"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton15"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginRight="10dp"
+                        android:background="@drawable/location_landmark"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvFragmentHomePageText2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:background="#00FFFFFF"
-                android:elevation="20dp"
-                android:src="@drawable/location_lake"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:layout_marginTop="16dp">
 
-            <ImageButton
-                android:id="@+id/imageButton7"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/tvFragmentHomePageNewest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Najnovije"
+                    android:textStyle="bold"
+                    android:layout_gravity="left"
+                    />
+
+                <TextView
+                    android:id="@+id/tvFragmentHomePageNewestShowAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:clickable="true"
+                    android:text="Prikaži sve"
+               />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvFragmentHomePageNewest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvFragmentHomePageText3"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:layout_weight="1"
-                android:background='@color/white'
-                android:src="@drawable/location_waterfall"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:layout_marginTop="16dp">
 
+                <TextView
+                    android:id="@+id/tvFragmentHomePageBestRated"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Najposećenije"
+                    android:textStyle="bold"
+                    android:layout_gravity="left"
+                    />
+
+                <TextView
+                    android:id="@+id/tvFragmentHomePageBestRatedShowAll"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:clickable="true"
+                    android:text="Prikaži sve"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvFragmentHomePageBestRated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
+
     </ScrollView>
-
-    <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
-        android:text="Najnovije"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollview" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFragmentHomePageLatest"
-        android:layout_width="0dp"
-        android:layout_height="174dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-    <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
-        android:clickable="true"
-        android:text="Prikaži sve"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/scrollview"
-        tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
