--- a/Client/BrzoDoLokacije/app/src/main/res/values/dimens.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <resources>
-      <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_padding">5dp</dimen>
     <dimen name="header1_size">20dp</dimen>
     <dimen name="component_padding">10dp</dimen>
-   </resources>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
+</resources>
