--- a/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_browse.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/fragment_browse.xml
@@ -15,35 +15,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/FragmentBrowseSearchBar" />
+         />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/FragmentBrowseSearchBar"
-        android:layout_width="250dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/rounded_white_button_login"
-        android:ems="10"
-        android:hint="  Pretraga"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/FragmentBrowseSearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:backgroundTint="#FFFFFF"
-        android:clickable="true"
-        android:focusable="true"
-        android:tint="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/FragmentBrowseSearchBar"
-        app:layout_constraintTop_toTopOf="@+id/FragmentBrowseSearchBar"
-        app:rippleColor="#FFFFFF"
-        app:srcCompat="@android:drawable/ic_search_category_default" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/FragmentBrowseMyLocation"
@@ -59,6 +33,42 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="#FFFFFF"
         app:srcCompat="@android:drawable/ic_menu_mylocation" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/FragmentBrowseCardViewSearch"
+        android:layout_width="0dp"
+        android:layout_marginTop="60dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:elevation="0dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/FragmentBrowseSearchBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/rounded_white_button_login"
+            android:hint="  Pretraga"
+            android:inputType="textPersonName"
+            android:paddingLeft="15dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/FragmentBrowseSearchButton"
+            android:layout_width="49dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:background="#00FFFFFF"
+            app:backgroundTint="#00FFFFFF"
+            app:cornerRadius="16dp"
+            app:icon="@drawable/ic_baseline_search_24"
+            app:iconTint="#333D70" />
+
+    </androidx.cardview.widget.CardView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
