--- a/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
+++ b/Client/BrzoDoLokacije/app/src/main/res/layout/activity_user_profile.xml
@@ -166,26 +166,45 @@
             </TableRow>
 
 
-            <TableRow android:layout_marginTop="30dp">
+            <TableRow android:layout_marginTop="20dp">
 
                 <TextView
                     android:id="@+id/tvFragmentUserProfilePosts"
+                    android:layout_width="105dp"
+                    android:gravity="center"
+                    android:text="OBJAVE"
+                    android:stateListAnimator="@null"
+                    android:backgroundTint="@color/white"
+                    android:textColor="#757471"/>
+
+                <Button
+                    android:id="@+id/tvActivityUserProfileFollowers"
                     android:layout_width="110dp"
+                    android:layout_height="28dp"
+                    android:layout_margin="0dp"
+                    android:backgroundTint="@color/white"
+                    android:clickable="true"
                     android:gravity="center"
-                    android:text="OBJAVE" />
+                    android:padding="0dp"
+                    android:stateListAnimator="@null"
+                    android:text="PRATIOCI"
+                    android:textColor="#757471"
 
-                <TextView
-                    android:id="@+id/tvFragmentUserProfileFollowers"
-                    android:layout_width="10dp"
-                    android:gravity="center"
-                    android:text="PRATIOCI" />
+                    tools:ignore="TouchTargetSizeCheck" />
 
-                <TextView
-                    android:id="@+id/tvFragmentUserProfileFollow"
-
+                <Button
+                    android:id="@+id/tvActivityUserProfileFollow"
                     android:layout_width="110dp"
+                    android:layout_height="28dp"
+                    android:layout_margin="0dp"
+                    android:backgroundTint="@color/white"
+                    android:clickable="true"
                     android:gravity="center"
-                    android:text="PRAĆENJA" />
+                    android:padding="0dp"
+                    android:stateListAnimator="@null"
+                    android:text="PRAĆENJA"
+                    android:textColor="#757471"
+                    tools:ignore="TouchTargetSizeCheck" />
             </TableRow>
 
             <TableRow
@@ -281,7 +300,7 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0"
                         app:shapeAppearanceOverlay="@style/Circular"
-                        tools:ignore="SpeakableTextPresentCheck" />
+                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </TableRow>
         </TableLayout>
